@@ -1,4 +1,6 @@
 1.9.5:
+* Client: Do not try to save UTXO.db when chain is not synchronized, unless network has been idle for 10 minutes
+* Client: Improved the algorithm of setting "common.BlockChainSynchronized"
 * Wallet: "-l -ltc -segwit" will now give addresses starting from M, not from 3 (see issue #41)
 * Client/WebUI: Suport for TLS connections with forced client-side authentication (https://hostname:4433/)
 * Client: Removed automatic conversion of old format unspent4 to the new UTXO.db
